# VerilogNetlist

./: .clang-format  .clang-tidy  CMakeLists.txt  config.h.in
cmake/: find-3rdparty.cmake  options.cmake  prelude.cmake  stamp_build.cmake  target-inspection.cmake  variables.cmake
include/hdl/: common.hpp
include/hdl/ast/: decl.hpp  expr.hpp
include/hdl/elab/: bits.hpp  elaborate.hpp  flatten.hpp  spec.hpp
include/hdl/hier/: instance.hpp
include/hdl/net/: bitmap.hpp  connectivity.hpp
include/hdl/tcl/: console.hpp
include/hdl/util/: id_string.hpp
include/hdl/vis/: json.hpp
misc/: gdbinit  idstring_printer.py
script/: header_config.json  header_manager.py
src/: common.cpp
src/ast/: decl.cpp  expr.cpp
src/demo/: main.cpp  tcl_console_main.cpp
src/elab/: elaborate.cpp  flatten.cpp  spec.cpp
src/hier/: instance.cpp
src/net/: bitmap.cpp  connectivity.cpp
src/tcl/: console.cpp
src/tcl/cmd/: cmd_dump.cpp  cmd_elab.cpp  cmd_help.cpp  cmd_history.cpp  cmd_invert.cpp  cmd_ports.cpp  cmd_query.cpp  cmd_select.cpp  cmd_selection.cpp  cmd_specs.cpp  cmd_undo.cpp  cmd_wires.cpp  register_all.cpp  register_all.hpp
src/tcl/cmd/user/: register_user.cpp  register_user.hpp
src/util/: id_string.cpp
src/vis/: json.cpp
test/: test_hdl.cpp
